--- a/markup/_scss/style.scss
+++ b/markup/_scss/style.scss
@@ -77,5 +77,6 @@
 @import "sections/_terms-conditions";
 
 @import "sections/_my_contests_content";
+@import "sections/_friends";
 
 @import "elements/nl-theme-selector";
