--- a/markup/_layouts/_content/_homepage/top5-player.jade
+++ b/markup/_layouts/_content/_homepage/top5-player.jade
@@ -86,7 +86,8 @@ div.tab-content(id="top5-player-content")
 								a.active(href="" data-target="#carouselTop5Players" data-slide-to="0")
 									div.menu-item.top-5
 										div.players 
-											div.player-thumbnail.top-5-images
+											#top5-players-nav(style='display: block;')
+												img#top-player-nav(src='assets/img/player1.png', style='display: block;')
 											div.number
 												p 1
 											div.player-thumbnail-name
@@ -95,7 +96,8 @@ div.tab-content(id="top5-player-content")
 								a.active(href="" data-target="#carouselTop5Players" data-slide-to="1")
 									div.menu-item.top-5
 										div.players 
-											div.player-thumbnail.top-5-images
+											#top5-players-nav(style='display: block;')
+												img#top-player-nav(src='assets/img/player1.png', style='display: block;')
 											div.number
 												p 2
 											div.player-thumbnail-name
@@ -104,7 +106,8 @@ div.tab-content(id="top5-player-content")
 								a.active(href="" data-target="#carouselTop5Players" data-slide-to="2")
 									div.menu-item.top-5
 										div.players 
-											div.player-thumbnail.top-5-images
+											#top5-players-nav(style='display: block;')
+												img#top-player-nav(src='assets/img/player1.png', style='display: block;')
 											div.number
 												p 3
 											div.player-thumbnail-name
@@ -113,7 +116,8 @@ div.tab-content(id="top5-player-content")
 								a.active(href="" data-target="#carouselTop5Players" data-slide-to="3")
 									div.menu-item.top-5
 										div.players 
-											div.player-thumbnail.top-5-images
+											#top5-players-nav(style='display: block;')
+												img#top-player-nav(src='assets/img/player1.png', style='display: block;')
 											div.number
 												p 4
 											div.player-thumbnail-name
@@ -122,7 +126,8 @@ div.tab-content(id="top5-player-content")
 								a.active(href="" data-target="#carouselTop5Players" data-slide-to="4")
 									div.menu-item.top-5
 										div.players 
-											div.player-thumbnail.top-5-images
+											#top5-players-nav(style='display: block;')
+												img#top-player-nav(src='assets/img/player1.png', style='display: block;')
 											div.number
 												p 5
 											div.player-thumbnail-name
@@ -132,13 +137,15 @@ div.tab-content(id="top5-player-content")
 								div.tab-content
 									div#player1.tab-pane.active(role="tabpanel")
 										div.row.player
-											div.player-image
+											#top5-players-picture(style='display: block;')
+												img#top-player(src='assets/img/player1.png', style='display: block;')
 												div.player-image-inner
 													div.number
 														p 1
 													div.name
 														p Matt Ryan 1
-													p.points 121 PTS 
+													div.points-in-bar
+														p.points 121 PTS 
 											div.player-info
 												p FP points
 												h5 121.5
@@ -148,86 +155,90 @@ div.tab-content(id="top5-player-content")
 												h5 Barcelona
 												p More info 
 												i.fa.fa-info-circle 
-							div.carousel-item
-								div.tab-content
-									div#player1.tab-pane.active(role="tabpanel")
-										div.row.player
-											div.player-image
-												div.player-image-inner
-													div.number
-														p 2
-													div.name
-														p Kasper Aarts
-													p.points 121 PTS 
-											div.player-info
-												p FP points
-												h5 121.5
-												p Salary
-												h5 $7100
-												p Team Name
-												h5 Barcelona
-												p More info 
-												i.fa.fa-info-circle 
-							div.carousel-item
-								div.tab-content
-									div#player1.tab-pane.active(role="tabpanel")
-										div.row.player
-											div.player-image
-												div.player-image-inner
-													div.number
-														p 3
-													div.name
-														p Dan NLC2
-													p.points 121 PTS 
-											div.player-info
-												p FP points
-												h5 121.5
-												p Salary
-												h5 $7100
-												p Team Name
-												h5 Barcelona
-												p More info 
-												i.fa.fa-info-circle 
-							div.carousel-item
-								div.tab-content
-									div#player1.tab-pane.active(role="tabpanel")
-										div.row.player
-											div.player-image
-												div.player-image-inner
-													div.number
-														p 4
-													div.name
-														p Anthony NLC2
-													p.points 121 PTS 
-											div.player-info
-												p FP points
-												h5 121.5
-												p Salary
-												h5 $7100
-												p Team Name
-												h5 Barcelona
-												p More info 
-												i.fa.fa-info-circle 
-							div.carousel-item
-								div.tab-content
-									div#player1.tab-pane.active(role="tabpanel")
-										div.row.player
-											div.player-image
-												div.player-image-inner
-													div.number
-														p 5
-													div.name
-														p XP NLC2
-													p.points 121 PTS 
-											div.player-info
-												p FP points
-												h5 121.5
-												p Salary
-												h5 $7100
-												p Team Name
-												h5 Barcelona
-												p More info 
-												i.fa.fa-info-circle 
+							//- div.carousel-item
+							//- 	div.tab-content
+							//- 		div#player1.tab-pane.active(role="tabpanel")
+							//- 			div.row.player
+							//- 				#top5-players-picture(style='display: block;')
+							//- 					img#top-player(src='assets/img/player1.png', style='display: block;')
+							//- 					div.player-image-inner
+							//- 						div.number
+							//- 							p 2
+							//- 						div.name
+							//- 							p Kasper Aarts
+							//- 						p.points 121 PTS 
+							//- 				div.player-info
+							//- 					p FP points
+							//- 					h5 121.5
+							//- 					p Salary
+							//- 					h5 $7100
+							//- 					p Team Name
+							//- 					h5 Barcelona
+							//- 					p More info 
+							//- 					i.fa.fa-info-circle 
+							//- div.carousel-item
+							//- 	div.tab-content
+							//- 		div#player1.tab-pane.active(role="tabpanel")
+							//- 			div.row.player
+							//- 				#top5-players-picture(style='display: block;')
+							//- 					img#top-player(src='assets/img/player1.png', style='display: block;')
+							//- 					div.player-image-inner
+							//- 						div.number
+							//- 							p 3
+							//- 						div.name
+							//- 							p Dan NLC2
+							//- 						p.points 121 PTS 
+							//- 				div.player-info
+							//- 					p FP points
+							//- 					h5 121.5
+							//- 					p Salary
+							//- 					h5 $7100
+							//- 					p Team Name
+							//- 					h5 Barcelona
+							//- 					p More info 
+							//- 					i.fa.fa-info-circle 
+							//- div.carousel-item
+							//- 	div.tab-content
+							//- 		div#player1.tab-pane.active(role="tabpanel")
+							//- 			div.row.player
+							//- 				#top5-players-picture(style='display: block;')
+							//- 					img#top-player(src='assets/img/player1.png', style='display: block;')
+							//- 					div.player-image-inner
+							//- 						div.number
+							//- 							p 4
+							//- 						div.name
+							//- 							p Anthony NLC2
+							//- 						p.points 121 PTS 
+							//- 				div.player-info
+							//- 					p FP points
+							//- 					h5 121.5
+							//- 					p Salary
+							//- 					h5 $7100
+							//- 					p Team Name
+							//- 					h5 Barcelona
+							//- 					p More info 
+							//- 					i.fa.fa-info-circle 
+							//- div.carousel-item
+							//- 	div.tab-content
+							//- 		div#player1.tab-pane.active(role="tabpanel")
+							//- 			div.row.player
+							//- 				#top5-players-picture(style='display: block;')
+							//- 					img#top-player(src='assets/img/player1.png', style='display: block;')
+							//- 					div.player-image-inner
+							//- 						div.number
+							//- 							p 5
+							//- 						div.name
+							//- 							p XP NLC2
+							//- 						p.points 121 PTS 
+							//- 				div.player-info
+							//- 					p FP points
+							//- 					h5 121.5
+							//- 					p Salary
+							//- 					h5 $7100
+							//- 					p Team Name
+							//- 					h5 Barcelona
+							//- 					p More info 
+							//- 					i.fa.fa-info-circle 
 
 
 	
