--- a/markup/_layouts/_content/_homepage/top5-manager.jade
+++ b/markup/_layouts/_content/_homepage/top5-manager.jade
@@ -75,7 +75,8 @@ div.tab-content(id="top5-manager-content")
 								a.active(data-target="#carouselTop5Managers" href="" data-slide-to="0")
 									div.menu-item.top-5
 										div.players 
-											div.manager-thumbnail.manager-1
+											#top5-managers-nav(style='display: block;')
+												img#top-manager-nav(src='assets/img/about/person1.png', style='display: block;')
 											div.number
 												p 1
 											div.manager-thumbnail-name
@@ -84,7 +85,8 @@ div.tab-content(id="top5-manager-content")
 								a(data-target="#carouselTop5Managers" href="" data-slide-to="1")
 									div.menu-item.top-5
 										div.players 
-											div.manager-thumbnail.manager-2
+											#top5-managers-nav(style='display: block;')
+												img#top-manager-nav(src='assets/img/about/person1.png', style='display: block;')
 											div.number
 												p 2
 											div.manager-thumbnail-name
@@ -93,7 +95,8 @@ div.tab-content(id="top5-manager-content")
 								a(data-target="#carouselTop5Managers" href="" data-slide-to="2")
 									div.menu-item.top-5
 										div.players 
-											div.manager-thumbnail.manager-3
+											#top5-managers-nav(style='display: block;')
+												img#top-manager-nav(src='assets/img/about/person1.png', style='display: block;')
 											div.number
 												p 3
 											div.manager-thumbnail-name
@@ -102,7 +105,8 @@ div.tab-content(id="top5-manager-content")
 								a(data-target="#carouselTop5Managers" href="" data-slide-to="3")
 									div.menu-item.top-5
 										div.players 
-											div.manager-thumbnail.manager-4
+											#top5-managers-nav(style='display: block;')
+												img#top-manager-nav(src='assets/img/about/person1.png', style='display: block;')
 											div.number
 												p 4
 											div.manager-thumbnail-name
@@ -111,7 +115,8 @@ div.tab-content(id="top5-manager-content")
 								a(data-target="#carouselTop5Managers" href="" data-slide-to="4")
 									div.menu-item.top-5
 										div.players 
-											div.manager-thumbnail.manager-5
+											#top5-managers-nav(style='display: block;')
+												img#top-manager-nav(src='assets/img/about/person1.png', style='display: block;')
 											div.number
 												p 5
 											div.manager-thumbnail-name
