--- a/markup/_layouts/_content/_index/nl-section-start-winning.jade
+++ b/markup/_layouts/_content/_index/nl-section-start-winning.jade
@@ -3,7 +3,6 @@ section.nl-section.nl-start-winning
         div.row
             div.col-md-12
                 h2 sign up & start winning.
-                div.btn.btn-primary get 10 free nlc2 coins
         div.row
             div.col-6.col-lg-3.nl-start-win-block.block1.co
                 a(href="#")
@@ -21,3 +20,5 @@ section.nl-section.nl-start-winning
                 a(href="#")
                     img(alt="" src="assets/img/nl-start-win-block4.jpg")
                     h3 win
+            div.col-6.offset-3.10-free-coins
+                div.btn.btn-primary.10-free-coins get 10 free nlc2 coins
