--- a/markup/_layouts/_partials/header.jade
+++ b/markup/_layouts/_partials/header.jade
@@ -10,28 +10,28 @@ header.nl-header
                 div.col-1.col-lg-7
                     div.nl-title The worlds first crypto fantasy sports
                 div.col-12.col-lg-3
-                    div.nl-btutton-login
+                    div.nl-button-login
                         a.btn.btn-primary.nl-m-r-15(href="login.html") Login
                         a.btn(href="register.html") SIGN UP
 
     div.nl-header--slide
         div.owl-carousel.main-carousel
-            div.item.nl-slide
+            div.item.nl-slides.nl-slide-1
                 div.container-fluid
                     h1 Draft your line up with <br />no limit coins
                     div.btn.btn-primary.btn-lg.nl-m-t-40 SIGN UP
-            div.item.nl-slide
-                div.container
-                    h2 Draft your line up with <br />no limit coins
+            div.item.nl-slides.nl-slide-2
+                div.container-fluid
+                    h2 Daily Fantasy Football
                     div.btn.btn-primary.btn-lg.nl-m-t-40 SIGN UP
-            div.item.nl-slide
-                div.container
-                    h2 Draft your line up with <br />no limit coins
+            div.item.nl-slides.nl-slide-3
+                div.container-fluid
+                    h2 Daily Fantasy Soccer
                     div.btn.btn-primary.btn-lg.nl-m-t-40 SIGN UP
-            div.item.nl-slide
-                div.container
-                    h2 Draft your line up with <br />no limit coins
-                    div.btn.btn-primary.btn-lg.nl-m-t-40 SIGN UP
+            //- div.item.nl-slides.nl-slide-4
+            //-     div.container-fluid
+            //-         h2 Daily Fantasy Football with <br />no limit coins
+            //-         //div.btn.btn-primary.btn-lg.nl-m-t-40 SIGN UP
 
 
 
