--- a/markup/_layouts/_content/_homepage/top5-player.jade
+++ b/markup/_layouts/_content/_homepage/top5-player.jade
@@ -155,90 +155,90 @@ div.tab-content(id="top5-player-content")
 												h5 Barcelona
 												p More info 
 												i.fa.fa-info-circle 
-							//- div.carousel-item
-							//- 	div.tab-content
-							//- 		div#player1.tab-pane.active(role="tabpanel")
-							//- 			div.row.player
-							//- 				#top5-players-picture(style='display: block;')
-							//- 					img#top-player(src='assets/img/player1.png', style='display: block;')
-							//- 					div.player-image-inner
-							//- 						div.number
-							//- 							p 2
-							//- 						div.name
-							//- 							p Kasper Aarts
-							//- 						p.points 121 PTS 
-							//- 				div.player-info
-							//- 					p FP points
-							//- 					h5 121.5
-							//- 					p Salary
-							//- 					h5 $7100
-							//- 					p Team Name
-							//- 					h5 Barcelona
-							//- 					p More info 
-							//- 					i.fa.fa-info-circle 
-							//- div.carousel-item
-							//- 	div.tab-content
-							//- 		div#player1.tab-pane.active(role="tabpanel")
-							//- 			div.row.player
-							//- 				#top5-players-picture(style='display: block;')
-							//- 					img#top-player(src='assets/img/player1.png', style='display: block;')
-							//- 					div.player-image-inner
-							//- 						div.number
-							//- 							p 3
-							//- 						div.name
-							//- 							p Dan NLC2
-							//- 						p.points 121 PTS 
-							//- 				div.player-info
-							//- 					p FP points
-							//- 					h5 121.5
-							//- 					p Salary
-							//- 					h5 $7100
-							//- 					p Team Name
-							//- 					h5 Barcelona
-							//- 					p More info 
-							//- 					i.fa.fa-info-circle 
-							//- div.carousel-item
-							//- 	div.tab-content
-							//- 		div#player1.tab-pane.active(role="tabpanel")
-							//- 			div.row.player
-							//- 				#top5-players-picture(style='display: block;')
-							//- 					img#top-player(src='assets/img/player1.png', style='display: block;')
-							//- 					div.player-image-inner
-							//- 						div.number
-							//- 							p 4
-							//- 						div.name
-							//- 							p Anthony NLC2
-							//- 						p.points 121 PTS 
-							//- 				div.player-info
-							//- 					p FP points
-							//- 					h5 121.5
-							//- 					p Salary
-							//- 					h5 $7100
-							//- 					p Team Name
-							//- 					h5 Barcelona
-							//- 					p More info 
-							//- 					i.fa.fa-info-circle 
-							//- div.carousel-item
-							//- 	div.tab-content
-							//- 		div#player1.tab-pane.active(role="tabpanel")
-							//- 			div.row.player
-							//- 				#top5-players-picture(style='display: block;')
-							//- 					img#top-player(src='assets/img/player1.png', style='display: block;')
-							//- 					div.player-image-inner
-							//- 						div.number
-							//- 							p 5
-							//- 						div.name
-							//- 							p XP NLC2
-							//- 						p.points 121 PTS 
-							//- 				div.player-info
-							//- 					p FP points
-							//- 					h5 121.5
-							//- 					p Salary
-							//- 					h5 $7100
-							//- 					p Team Name
-							//- 					h5 Barcelona
-							//- 					p More info 
-							//- 					i.fa.fa-info-circle 
+							div.carousel-item
+								div.tab-content
+									div#player1.tab-pane.active(role="tabpanel")
+										div.row.player
+											#top5-players-picture(style='display: block;')
+												img#top-player(src='assets/img/player1.png', style='display: block;')
+												div.player-image-inner
+													div.number
+														p 2
+													div.name
+														p Kasper Aarts
+													p.points 121 PTS 
+											div.player-info
+												p FP points
+												h5 121.5
+												p Salary
+												h5 $7100
+												p Team Name
+												h5 Barcelona
+												p More info 
+												i.fa.fa-info-circle 
+							div.carousel-item
+								div.tab-content
+									div#player1.tab-pane.active(role="tabpanel")
+										div.row.player
+											#top5-players-picture(style='display: block;')
+												img#top-player(src='assets/img/player1.png', style='display: block;')
+												div.player-image-inner
+													div.number
+														p 3
+													div.name
+														p Dan NLC2
+													p.points 121 PTS 
+											div.player-info
+												p FP points
+												h5 121.5
+												p Salary
+												h5 $7100
+												p Team Name
+												h5 Barcelona
+												p More info 
+												i.fa.fa-info-circle 
+							div.carousel-item
+								div.tab-content
+									div#player1.tab-pane.active(role="tabpanel")
+										div.row.player
+											#top5-players-picture(style='display: block;')
+												img#top-player(src='assets/img/player1.png', style='display: block;')
+												div.player-image-inner
+													div.number
+														p 4
+													div.name
+														p Anthony NLC2
+													p.points 121 PTS 
+											div.player-info
+												p FP points
+												h5 121.5
+												p Salary
+												h5 $7100
+												p Team Name
+												h5 Barcelona
+												p More info 
+												i.fa.fa-info-circle 
+							div.carousel-item
+								div.tab-content
+									div#player1.tab-pane.active(role="tabpanel")
+										div.row.player
+											#top5-players-picture(style='display: block;')
+												img#top-player(src='assets/img/player1.png', style='display: block;')
+												div.player-image-inner
+													div.number
+														p 5
+													div.name
+														p XP NLC2
+													p.points 121 PTS 
+											div.player-info
+												p FP points
+												h5 121.5
+												p Salary
+												h5 $7100
+												p Team Name
+												h5 Barcelona
+												p More info 
+												i.fa.fa-info-circle 
 
 
 	
