--- a/markup/_layouts/_content/live_score_content.jade
+++ b/markup/_layouts/_content/live_score_content.jade
@@ -403,7 +403,19 @@ section.nl-section.nl-players.nl-live-score
 									div.col-8.col-lg-9
 										p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 
-
+		div.row
+			div.col-12.text-center
+				div.nl-status-wrapper
+					ul
+						li
+							span.playing.indicator
+							span Playing
+						li
+							span.played.indicator
+							span Played
+						li
+							span.not-playing.indicator
+							span Not Playing
 
 		div.row
 			+list-of-teams(12)
