--- a/markup/_scss/sections/_nl-live-score.scss
+++ b/markup/_scss/sections/_nl-live-score.scss
@@ -453,27 +453,85 @@
 // override to nl-create-team.scss
 .nl-live-score {
 
-	.nl-team-field {
-	    #create-helmet {
+	.nl-status-wrapper {
+		margin: 0 auto;
+	  }
 
-	      #oval {
-	        position: absolute;
-	        top: 14px;
-	        z-index: 1;
-	        right: 54%;
-	        width: 35%;
-	        height: auto;
-	      }
-	      #letter {
-	        position: absolute;
-	        top: 16px;
-	        z-index: 2;
-	        right: 52px;
-	        width: 17%;
-	        height: auto;
-	      }
-	    }
- 	}
+	.nl-status-wrapper ul {
+		padding: 0.25rem 0.5rem;
+		font-weight: 400;
+		font-size: 13px;
+
+		.indicator {
+		  width: 0.75rem;
+		  height: 0.75rem;
+		}
+	  }
+	  .nl-status-wrapper span.playing {
+		background: green;
+	  }
+
+	  .nl-status-wrapper span.played {
+		background: #5fadcc;
+	  }
+
+	  .nl-status-wrapper span.not-playing {
+		background: red;
+	  }
+
+	.nl-status-wrapper{
+		display: inline-block;
+		background: linear-gradient(to top, #061540, #1f3658);
+		color: #fff;
+		overflow: hidden;
+		margin-bottom: 0.75rem;
+		//margin-top: -3rem;
+		font-weight: 300;
+		overflow: hidden;
+		box-shadow: 3px 0 7px rgba(0, 0, 0, 0.21);
+		border-radius: calculateRem(10px);
+
+		ul{
+		  list-style-type: none;
+		  margin: 0;
+		  //padding: calculateRem(18px);
+
+		  li{
+			display: inline-block;
+			text-transform: uppercase;
+			//font-size: calculateRem(20px);
+
+			span{
+			  vertical-align: middle;
+			  display: inline-block;
+			}
+
+		  }
+		}
+
+	}
+
+	.nl-team-field {
+		#create-helmet {
+
+		  #oval {
+			position: absolute;
+			top: 14px;
+			z-index: 1;
+			right: 54%;
+			width: 35%;
+			height: auto;
+		  }
+		  #letter {
+			position: absolute;
+			top: 16px;
+			z-index: 2;
+			right: 52px;
+			width: 17%;
+			height: auto;
+		  }
+		}
+	}
 
 	.nl-team-list {
 		max-width: 27.25rem;
@@ -968,23 +1026,23 @@
 
 	#create-helmet {
 
-      	#oval {
-	        position: absolute;
-		    top: 18px;
-		    z-index: 1;
-		    right: 33px;
-		    width: 6%;
-		    height: auto;
-	    }
-	    #letter {
-	        position: absolute;
-		    top: 19px;
-		    z-index: 2;
-		    right: 37px;
-		    width: 3%;
-		    height: auto;
-	    }
-    }
+		#oval {
+			position: absolute;
+			top: 11px;
+			z-index: 1;
+			right: 26px;
+			width: 5%;
+			height: auto;
+		}
+		#letter {
+			position: absolute;
+			top: 11px;
+			z-index: 2;
+			right: 30px;
+			width: 3%;
+			height: auto;
+		}
+	}
 
 	.nl-info-table-button {
 		min-height: 3rem;
